# chess

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  LICENSE.md  TODO
.ci/: compile.bat  compile.sh  run-programms.sh
.github/workflows/: integration-testing.yml  test-linux.yml  test-macos.yml  test-windows.yml
chess/: CMakeLists.txt  chess.cpp  chess.hpp  parsing.hpp
chess_fronts/: testing.cpp
chess_old/: chess-additions.cpp  chess.cpp  chess.hpp  chessField.h  console-frontend.cpp  testing-front.cpp
chess_src/: CMakeLists.txt  chess.cpp  chess.hpp  info.hpp.in  parsing.hpp
chess_tools/: CMakeLists.txt  config-test.cpp
dependencies/: CMakeLists.txt
tests/: CMakeLists.txt  gameTesting.cpp  pieceTesting.cpp  testing.cpp  tests.cpp
